# artifactory_mcp

./: .gitignore  .gitleaks.toml  .markdownlintignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  HANDOFF.md  README.md  main.py  pyproject.toml
docs/: api.md  configuration.md  contributing.md  installation.md
docs/migration-guides/: README.md
examples/: tool_calls.json
src/artifactory_mcp/: __init__.py  artifact_ops.py  artifactory_client.py  bridge.py  errors.py  handles.py  models.py  runtime.py  server.py  settings.py  tools.py
tests/: test_artifactory_client.py  test_bridge.py  test_handles.py  test_settings.py  test_smoke.py
typings/: artifactory.pyi
